#2 added jigsaw and fixed some sonar issues